--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="custom-select-container">
                 <div class="select-selected city-search-box">
                     <input type="text" id="city-input" placeholder="Ville ou Code Postal..." autocomplete="off">
+                    <button id="clear-input" class="clear-btn" aria-label="Effacer">×</button>
                 </div>
                 <div class="select-items select-hide" id="city-options"></div>
             </div>
@@ -26,7 +27,7 @@
                 <p id="condition">Analyse du temps...</p>
             </div>
             <div class="threat-line">
-                <span id="threat-text">Verole ça ne marche pas !!</span>
+                <span id="threat-text">Je te surveille...</span>
             </div>
             <div class="details-grid">
                 <div class="detail-card"><span>Humidité : </span><b id="humidity">--%</b></div>
@@ -37,5 +38,4 @@
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
